schema/testdata/errors/relationships_create_nested_undertands_optional.keel
model House {
    fields {
        houseName Text
        houseNumber Number
        rooms Room[]
        waterConnection Connection
        owner Owner
    }

    actions {
        //expect-error:16:27:E034:required field 'houseNumber' must be set by a non-optional input, a @set expression or with @default
        //expect-error:16:27:E034:required field 'waterConnection.supplierCo' must be set by a non-optional input, a @set expression or with @default
        //expect-error:16:27:E034:required field 'waterConnection.region' must be set by a non-optional input, a @set expression or with @default
        //expect-error:16:27:E034:required field 'owner.ownerName' must be set by a non-optional input, a @set expression or with @default
        //expect-error:16:27:E034:required field 'owner.pet.typeOfAnimal' must be set by a non-optional input, a @set expression or with @default
        create createHouse() with (houseName)
    }
}

model Room {
    fields {
        house House
        name Text
        colour Text
        floor Floor
    }
}

model Floor {
    fields {
        covering Text
        area Number
    }
}

model Connection {
    fields {
        supplierCo Text
        region Text
    }
}

model Owner {
    fields {
        ownerName Text
        pet Pet
    }
}

model Pet {
    fields {
        typeOfAnimal Text
        favouriteToy Toy
    }
}

model Toy {
    fields {
        whatIsIt Text?
    }
}
